<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_signing_mode_label">

        <ListPreference
            app:key="signingMode"
            app:title="@string/settings_signing_mode_label"
            app:entries="@array/signing_mode_entries"
            app:entryValues="@array/signing_mode_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="remote" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_signing_signing_servers">

        <EditTextPreference
            app:key="proofSignServerUrl"
            app:title="@string/settings_signing_proofsign_server"
            app:dialogTitle="@string/settings_signing_proofsign_server" />

        <EditTextPreference
            app:key="tsaServerUrl"
            app:title="@string/settings_signing_tsa"
            app:dialogTitle="@string/settings_signing_tsa" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_signing_identity">

        <SwitchPreferenceCompat
            app:key="useCawgSigning"
            app:title="@string/settings_signing_cawg"
            app:summaryOn="@string/settings_signing_cawg_on"
            app:summaryOff="@string/settings_signing_cawg_off"
            app:defaultValue="false" />

        <EditTextPreference
            app:key="cawgCreator"
            app:title="@string/settings_signing_cawg_creator"
            app:dialogTitle="@string/settings_signing_cawg_creator" />

        <EditTextPreference
            app:key="cawgRights"
            app:title="@string/settings_signing_cawg_rights"
            app:dialogTitle="@string/settings_signing_cawg_rights" />

        <Preference
            app:key="editCawg"
            app:title="@string/settings_signing_cawg_edit"
            app:summary="@string/settings_signing_cawg_edit_summary"
            />

        <Preference
            app:key="generateCawg"
            app:title="@string/settings_signing_cawg_generate"
            app:summary="@string/settings_signing_cawg_generate_summary"
            />
    </PreferenceCategory>

</PreferenceScreen>
