<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="org.witness.proofmode.org.witness.proofmode.ui.DigitalSignaturesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|left|top"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp">

            <TextView
                style="@style/OnboardingStepTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/digital_signatures_title" />

            <TextView
                style="@style/OnboardingStepContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/digital_signatures_info" />

            <TextView
                style="@style/OnboardingStepSubtitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="start|left"
                android:text="@string/digital_signatures_whatis_title" />

            <TextView
                style="@style/OnboardingStepContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="start|left"
                android:text="@string/digital_signatures_whatis_info" />

            <TextView
                style="@style/OnboardingStepSubtitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="start|left"
                android:text="@string/digital_signatures_whattodo_title" />

            <TextView
                style="@style/OnboardingStepContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="start|left"
                android:text="@string/digital_signatures_whattodo_info" />
        </LinearLayout>

    </ScrollView>

</FrameLayout>
