<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingLeft="10dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    android:background="@drawable/dialog_background"
    >

    <com.caverock.androidsvg.SVGImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:svg="ic_basic.svg" />

    <TextView
        style="@style/OnboardingStepContentStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/share_mode_basic"
        android:textAllCaps="true" />

    <TextView
        style="@style/OnboardingStepContentStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_info_basic_title" />

    <TextView
        style="@style/ShareInfoStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|start"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/share_info_basic_message"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/got_it" />
</LinearLayout>

