<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.witness.proofmode.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <TextView
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <TextView
        style="@style/ContentStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_description"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1,2"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/switchNotarize"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:button="@drawable/option_notary_selector" />

                <TextView
                    style="@style/SettingsOptionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_notary" />

                <TextView
                    style="@style/SettingsOptionDescStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_notary_desc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/switchLocation"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:button="@drawable/option_location_selector" />

                <TextView
                    style="@style/SettingsOptionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_location" />

                <TextView
                    style="@style/SettingsOptionDescStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_location_desc" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/switchDevice"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:button="@drawable/option_phone_selector" />

                <TextView
                    style="@style/SettingsOptionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_phone" />

                <TextView
                    style="@style/SettingsOptionDescStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_phone_desc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/switchCellInfo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:button="@drawable/option_network_selector" />

                <TextView
                    style="@style/SettingsOptionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_network" />

                <TextView
                    style="@style/SettingsOptionDescStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_network_desc" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>
